resources/tests/parser/good/expr_compound.gshl
a + 2 / 4 * 3**b - (4 + a)
a += 3
b = 6
1 + 3
5 / 4
#a**3
43 % 32**3
something++
something--
