resources/tests/parser/bad/expr_compound.gshl
a +== 3
4**
=3
3 0
"qwe" "tre"
4"qwe"
32"
something += 3"3
3 %
